# trace

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test-publish.yml
examples/: basic_usage.py
tests/: test_html_utils.py  test_models.py  test_scraper.py
trace_scraper/: __init__.py  cli.py  html_utils.py  models.py  scraper.py  sitemap.py
